<resources>
    <string name="app_name" translatable="false">Linux News</string>

    <string name="ui_navigation_drawer_open">Open navigation drawer</string>
    <string name="ui_navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ui_loading">Fetching&#8230;</string>

    <string name="dist_archlinux">Arch Linux</string>
    <string name="dist_centos">CentOS</string>
    <string name="dist_debian">Debian</string>
    <string name="dist_gnewsense">gNewSense</string>
    <string name="dist_parabola">Parabola GNU/Linux-libre</string>
    <string name="dist_scientificlinux">Scientific Linux</string>
    <string name="dist_ubuntu">Ubuntu</string>

    <string name="feed_archlinux" translatable="false">https://www.archlinux.org/feeds/news/</string>
    <string name="feed_debian" translatable="false">https://www.debian.org/News/news</string>
    <string name="feed_parabola" translatable="false">https://www.parabola.nu/feeds/news/</string>
    <string name="feed_ubuntu" translatable="false">https://insights.ubuntu.com/feeds/</string>

    <string name="pref_distro" translatable="false">distro</string>
    <string name="feed_centos" translatable="false">http://rss.gmane.org/messages/complete/gmane.linux.centos.announce</string>
    <string name="feed_scientificlinux" translatable="false">http://rss.gmane.org/messages/complete/gmane.linux.scientific.user</string>
    <string name="feed_gnewsense" translatable="false">https://thegnewsenseblog.wordpress.com/feed/</string>
    <string name="dist_fedora">Fedora</string>
    <string name="feed_fedora" translatable="false">https://fedoramagazine.org/feed/</string>
    <string name="app_description">Fetch news about Linux</string>
    <string name="pref_dist_dialogtitle">Select distros that are shown</string>
</resources>
