<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Arch-based">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dist_archlinux"
                    android:icon="@drawable/ic_dist_archlinux"
                    android:title="@string/dist_archlinux" />

                <item
                    android:id="@+id/dist_parabola"
                    android:icon="@drawable/ic_dist_parabola"
                    android:title="@string/dist_parabola" />
            </group>
        </menu>
    </item>

    <item android:title="Debian-based">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dist_debian"
                    android:icon="@drawable/ic_dist_debian"
                    android:title="@string/dist_debian" />
                <item
                    android:id="@+id/dist_gnewsense"
                    android:icon="@drawable/ic_dist_gnewsense"
                    android:title="@string/dist_gnewsense" />
                <item
                    android:id="@+id/dist_ubuntu"
                    android:icon="@drawable/ic_dist_ubuntu"
                    android:title="@string/dist_ubuntu" />
            </group>
        </menu>
    </item>

    <item android:title="Fedora-based">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dist_centos"
                    android:icon="@drawable/ic_dist_centos"
                    android:title="@string/dist_centos" />
                <item
                    android:id="@+id/dist_scientificlinux"
                    android:icon="@drawable/ic_dist_scientificlinux"
                    android:title="@string/dist_scientificlinux" />
            </group>
        </menu>
    </item>

</menu>
